# rust-thesis-oracles

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  rustfmt.toml
benches/: benchmark.rs  math-bench.rs
bls_signatures/: Cargo.toml
bls_signatures/src/: main.rs
btc_attempt_cargo/: Cargo.toml
btc_attempt_cargo/src/: main.rs
dlc_fast_prototyping/: Cargo.toml  dokumentacia.md  naming.md  technicke-poznamky.md  to-do.md
dlc_fast_prototyping/benches/: benchmark.rs  math-bench.rs
dlc_fast_prototyping/input_contracts/sample_contracts/: numerical_contract_input.json  simple_contract_input.json
dlc_fast_prototyping/input_contracts/test_contracts/: excessive_feerate_input.json  invalid_interval_points_input.json  negative_payout_input.json  no_intervals_input.json  noncontinuous_input.json  nonzero_first_point_input.json
dlc_fast_prototyping/src/: config.rs  lib.rs  main.rs  secp_utils.rs
dlc_fast_prototyping/src/adaptor_signature_scheme/: ecdsa_zkp_adaptor.rs  mod.rs  schnorr_zkp_adaptor.rs
dlc_fast_prototyping/src/adaptor_signatures/: ecdsa_zkp_adaptor.rs  mod.rs  schnorr_fun_adaptor.rs
dlc_fast_prototyping/src/cet_storage/: mod.rs
dlc_fast_prototyping/src/common/: constants.rs  error.rs  fun.rs  mod.rs  runparams.rs  types.rs
dlc_fast_prototyping/src/crypto_utils/: basis_crypto_utils.rs  mod.rs  secp_utils.rs  simple_crypto_utils.rs
dlc_fast_prototyping/src/dlc_computation/: mod.rs  parallel_dlc_computation.rs  serial_dlc_computation.rs  simple_dlc_computation.rs  unified_dlc_computation.rs
dlc_fast_prototyping/src/dlc_controller/: mod.rs  very_simple_controller.rs
dlc_fast_prototyping/src/dlc_storage/: mod.rs  simple_array_storage.rs
dlc_fast_prototyping/src/oracle/: impl_oracle_local.rs  mod.rs  rand_int_oracle.rs
dlc_fast_prototyping/src/parser/: mod.rs  parser_mock.rs  parser_out_u32.rs  parser_u32.rs
dlc_fast_prototyping/src/sign_util/: mod.rs
input_contracts/: README.md
input_contracts/sample_contracts/: numerical_contract_input.json  reduced_contract_input.json
input_contracts/test_contracts/: empty_contract_input.json  invalid_collateral_input.json  invalid_payout_level_input.json  last_outcome_not_final_input.json
multithread/: Cargo.toml
multithread/src/: blockchain.rs  main.rs  oracle.rs  party.rs  user.rs
src/: config.rs  lib.rs  main.rs
src/adaptor_signature_scheme/: ecdsa_zkp_adaptor.rs  schnorr_zkp_adaptor.rs
src/common/: error.rs  fun.rs  types.rs
src/crypto_utils/: basis_crypto_utils.rs  secp_utils.rs
src/dlc_computation/: mod.rs  unified_dlc_computation.rs
src/dlc_controller/: mod.rs  very_simple_controller.rs
src/dlc_storage/: mod.rs  simple_array_storage.rs
src/oracle/: mod.rs  rand_int_oracle.rs
src/parser/: mod.rs  parser_out_u32.rs
sum_atp_oracle/: Cargo.toml
sum_atp_oracle/src/: main.rs
wes/: Cargo.toml
wes/src/: main.rs
