[package]
name = "dlc_fast_prototyping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# secp256k1-zkp = {version = "0.11.0", features = ["rand", "rand-std", "global-context"]}
secp256k1-zkp = { git = "https://github.com/siv2r/rust-secp256k1-zkp.git", branch = "schnorr-adaptor-bindings", features = ["rand", "rand-std", "global-context", "serde"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
bitcoin = "0.32.4"
sha2 = "0.10.8"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
static_assertions = "1.1.0"

[dev-dependencies]
k256 = "0.13.4"
criterion = "0.5.1"
secp256kfun = "0.10.0"
schnorr_fun = "0.10"

[[bench]]
harness = false
name = "benchmark"

[[bench]]
harness = false
name = "math-bench"

[features]
ecdsa = []
schnorr = []
parallel-cpt = []
parallel-parser = []
enable-benchmarks = []
default = ["ecdsa"]