[package]
name = "btc_attempt_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand-std"] }
schnorr_fun = "0.9.1"
sha2 = "0.10.8"
#rand_core = "0.6.4"
#rand_core = { version = "0.6.4", features = ["getrandom"] }
#secp256k1 = { version = "0.27.0", features = ["rand"] }
#rand = { version = "0.8.5", features = ["std"] }