[package]
name = "multithread"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand-std"] }
schnorr_fun = "0.9.1"
sha2 = "0.10.8"

thread-broadcaster = "0.1.0"
#crossbeam-channel = "0.5.8"